/*
 * $Id: ChangeLog,v 1.544 2008-10-04 19:58:23 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-10-04 12:02 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_browse.prg
    * Fixed message to multi-language when record is locked.
      Thanks to Fernando Yurisich.
  * include/i_monthcal.ch
  * include/i_windefs.ch
  - source/c_monthcal.c
  * source/common_make.bat
  * source/h_monthcal.prg
  * source/makelib_mingw.bat
    + DISABLED and SUBCLASS clauses added to MONTHCAL.
    * Moved C code from c_monthcal.c to h_monthcal.prg file.
    - c_monthcal.c removed.

2008-09-30 20:07 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/makelib_bcc.bat
    * TLIB.EXE takes file names from %HG_FILES1_PRG%, %HG_FILES2_PRG%
      and %HG_FILES_C% .

2008-09-28 19:34 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_ipaddress.ch
  - source/c_ipaddress.c
  * source/common_make.bat
  * source/h_ipaddress.prg
  * source/makelib_bcc.bat
  * source/makelib_mingw.bat
    + DISABLED and SUBCLASS clauses added to IPADDRESS.
    * Moved C code from c_ipaddress.c to h_ipaddress.prg file.
    - c_ipaddress.c removed.
  * source/h_windows.prg
    + ::DebugMessageQueryNotify() method added.

2008-09-28 13:28 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_progressmeter.prg
    * Progressmeter must be NOTABSTOP.
  * source/h_browse.prg
  * source/h_xbrowse.prg
    * ::lDescending property added.

2008-09-19 15:38 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * source/miniprint.prg
    - removed getdefaultprinter() function from miniprint, now harbour contain this function.

2008-09-09 22:57 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_window.ch
    ! Fixed .EnableUpdate and .DisableUpdate semi-OOP methods.

2008-09-07 18:06 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>