@@ -1,6 +1,6 @@
 @echo off
 rem
-rem $Id: makelib_mingw.bat,v 1.17 2008-10-04 19:58:24 guerra000 Exp $
+rem $Id: makelib_mingw.bat,v 1.18 2008-10-05 15:37:27 guerra000 Exp $
 rem
 cls
 
@@ -35,7 +35,7 @@ if errorlevel 1 goto EXIT2
 if exist miniprint.c gcc %OOHG_X_FLAGS% miniprint.c
 if errorlevel 1 goto EXIT2
 
-%hg_mgw%\bin\ar rc %hg_root%\lib\liboohg.a h_scrsaver.o h_edit.o h_edit_ex.o h_error.o h_ipaddress.o h_monthcal.o h_help.o h_status.o h_tree.o h_toolbar.o h_init.o h_media.o c_media.o c_resource.o h_cursor.o c_cursor.o h_ini.o h_report.o h_font.o c_font.o h_hyperlink.o c_scrsaver.o h_hotkey.o h_graph.o c_graph.o h_richeditbox.o h_browse.o h_scroll.o h_http.o h_zip.o h_progressmeter.o h_comm.o h_print.o h_splitbox.o h_scrollbutton.o h_xbrowse.o h_activex.o c_activex.o h_pdf.o
+%hg_mgw%\bin\ar rc %hg_root%\lib\liboohg.a h_scrsaver.o h_edit.o h_edit_ex.o h_error.o h_ipaddress.o h_monthcal.o h_help.o h_status.o h_tree.o h_toolbar.o h_init.o h_media.o c_media.o c_resource.o h_cursor.o c_cursor.o h_ini.o h_report.o h_font.o c_font.o h_hyperlink.o c_scrsaver.o h_hotkey.o h_graph.o c_graph.o h_richeditbox.o h_browse.o h_scroll.o h_http.o h_zip.o h_progressmeter.o h_comm.o h_print.o h_splitbox.o h_scrollbutton.o h_xbrowse.o h_activex.o c_activex.o h_pdf.o h_tooltip.o
 if errorlevel 2 goto EXIT2
 %hg_mgw%\bin\ar rc %hg_root%\lib\liboohg.a h_windows.o h_form.o c_windows.o h_crypt.o h_winapimisc.o h_slider.o c_controlmisc.o c_dialogs.o c_grid.o c_image.o c_msgbox.o c_progressbar.o c_spinner.o c_winapimisc.o h_button.o h_checkbox.o h_combo.o h_controlmisc.o h_datepicker.o h_editbox.o h_dialogs.o h_grid.o h_image.o h_label.o h_listbox.o h_menu.o h_msgbox.o h_frame.o h_progressbar.o h_radio.o h_spinner.o h_tab.o h_textbox.o h_timer.o h_registry.o h_internal.o h_textarray.o h_hotkeybox.o
 if errorlevel 2 goto EXIT2
